--- a/css/testaus.css
+++ b/css/testaus.css
@@ -1,56 +1,149 @@
+html{
+    box-sizing: border-box;
+}
+/* yleinen fontti koko sivulle*/
 body{
     font-family: 'Roboto', sans-serif;
+    color: #4f4f4f;
+    background-color: #f5f5f5;
+    overflow-x: hidden;
+
 }
+/* otsikoiden koot tehtävänannon mukaiseksi */
 h1 {
     font-size: 24px;
 }
 h2, h3, h4, h5 {
     font-size: 16px;
 }
+/* vitosotsikolle tarkemmat muotoilut kuten kirjainten väliin lisää tilaa ja eri fonttiväri */
 h5{
     letter-spacing: 2px; 
-    color: #818963;
+    color: #556B2F;
+    /* color: #818963; */
     margin-top: 20px;
 }
+/* footerin taulukkoelementille muotoilu */
 table{
     color: #4f4f4f; 
     border-color: #666;
 }
-a{
+/* navigointipalkin sisällä oleville linkeille muotoilu */
+#navbar a{
     text-decoration: none;
-    color: black;
+    letter-spacing: 2pt;
+    color: #556B2F;
+    /* color: #4f4f4f; */
     padding: 10px;
+    font-weight: bold;
 }
-a:hover{
+/* footerin sisällä oleville linkeille muotoilu */
+#footer a{
     text-decoration: none;
-    color: black;
+    color: #4f4f4f;
+    padding:10px
+}
+/* yleisesti linkeille hover-muotoilut */
+#navbar a:hover, #footer a:hover{
+    text-decoration: none;
+    color: #4f4f4f;
     border-radius: 4px;
     background-color: #ee8d51c2;
 }
+/* p-elementin muotoilu */
 p{
     line-height: normal;
     margin:0;
 }
-.container-fluid{
-    padding: 0;
+/* navigointipalkin sijainti */
+#navbarDiv{
+    top: 0;
+    z-index: 2;
 }
-.middleContainer{
-    padding: 30px;
-}
+ /* navigointipalkin yleismuotoilu */
 #navbar {
-    border-bottom: 2px black solid;
+    height: 150px;
+    box-shadow: 2px 2px 10px #4f4f4f;
+    background-color: whitesmoke;
 }
+/* kursorin muttaminen */
 .navLinks{
     cursor: pointer;
 }
+/* footerin containerin sijainti */
+#footerContainer{
+    bottom: 0;
+}
+/* footerin taustaväri ja leveys */
 #footer{
     background-color: #d9cfc5;
     width: 100%;
 }
-.testColorBox{
+.container-fluid{
+    padding: 0;
+}
+/* etusivun kuvan containeri */
+#palvelutHeaderImgDiv{
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top:20px;
+    margin-bottom: 20px;
+}
+/* etusivun kuvan koko */
+#palvelutHeaderImg{
+    width: 100%;
+    filter: grayscale(15%);
+}
+/* etusivun tekstin containeri*/
+#palvelutHeaderTextDiv{
+    width: 70%;
+    top: 40%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    text-wrap: wrap;
+    letter-spacing: 2pt;
+}
+/* etusivun header-tekstin muotoilu */
+#palvelutHeaderText{ 
+    color: white;
+    text-shadow: 10px 10px 20px black;
+    font-size: 4vw;
+    font-weight: bold;
+}
+/* pienempi otsikkoteksti */
+#palvelutHeaderTextSmall{
+    font-size: 1.5vw;
+    font-weight: bold;
+}
+/* pienemmän otsikkotekstin container */
+#palvelutHeaderTextSmallDiv{
     width: 80%;
+    max-width: 80%;
+    text-align: center;
+    text-wrap: wrap;
+}
+
+
+
+
+
+
+.middleContainer{
+    padding: 30px;
+}
+.navLinks{
+    cursor: pointer;
+}
+.testColorBox{
+    width: 100%;
     height: 300px;
-    border: 0.5px black solid;
+    /* border: solid;
+    border-color: #4f4f4f;
+    border-width: 0.1px; */
 }
 .colorBall{
     width: 30px;
