--- a/index.css
+++ b/index.css
@@ -1,7 +1,12 @@
+html{
+    box-sizing: border-box;
+}
 /* yleinen fontti koko sivulle*/
 body{
     font-family: 'Roboto', sans-serif;
     color: #4f4f4f;
+    overflow-x: hidden;
+    margin: unset;
 }
 /* otsikoiden koot tehtävänannon mukaiseksi */
 h1 {
@@ -21,6 +26,10 @@ h5{
 table{
     color: #4f4f4f; 
     border-color: #666;
+}
+.container-fluid{
+    padding: 0;
+    margin: 0;
 }
 /* navigointipalkin sisällä oleville linkeille muotoilu */
 #navbar a{
@@ -57,8 +66,9 @@ p{
  /* navigointipalkin yleismuotoilu */
 #navbar {
     height: 150px;
-    font-weight: 500;
+    box-shadow: 2px 2px 10px #4f4f4f;
     background-color: whitesmoke;
+    /* position: relative; */
 }
 /* kursorin muttaminen */
 .navLinks{
@@ -66,7 +76,7 @@ p{
 }
 /* etusivun kuvan containeri */
 #headerImgDiv{
-    width: 60%;
+    width: 100%;
     max-width: 100%;
     display: flex;
     justify-content: center;
@@ -75,11 +85,11 @@ p{
 }
 /* etusivun kuvan koko */
 #headerImg{
-    width: 100%;
+    width: 80%;
 }
 /* etusivun tekstin containeri*/
 #headerTextDiv{
-    width: 70%;
+    width: 80%;
     top: 25%; 
     left: 50%; 
     transform: translate(-50%, -50%);
@@ -95,6 +105,11 @@ p{
     font-size: 4vw;
     font-weight: bold;
 }
+#headerSlogan{
+    color: white;
+    font-size: 1.5vw;
+    font-style: italic;
+}
 /* footerin containerin sijainti sivulla */
 #footerContainer{
     bottom: 0;
@@ -103,4 +118,43 @@ p{
 #footer{
     background-color: #d9cfc5;
     width: 100%;
+}
+/* Hampparivalikon container */
+.hamburgerDiv{
+    position: relative;
+    height: 60px;
+    width: 100%;
+    background-color: whitesmoke;
+    display: none;
+}
+/* hampurilaisvalikko */
+#hamburger{
+    position: absolute;
+    top: 10%;
+    left: 0;
+    border: unset;
+    background: unset;
+    padding: 10px;
+}
+/* hampparivalikon ikonin väritys */
+#hamburger svg {
+    stroke: #556B2F;
+}
+/* responsiivinen navigointi */
+@media screen and (max-width: 996px){
+    #navbarDiv{
+        display: none;
+    }
+    /* #navbar {
+        display:none;
+    } */
+    .hamburgerDiv {
+        display: flex;
+    }
+    #headerText{
+        font-size: 6vw;
+    }
+    #headerSlogan{
+        font-size: 3vw;
+    }
 }
