--- a/css/galleria.css
+++ b/css/galleria.css
@@ -1,59 +1,177 @@
-body{
-    font-family: 'Roboto', sans-serif;
+html{
     box-sizing: border-box;
 }
+/* yleinen fontti koko sivulle*/
+body{
+    font-family: 'Roboto', sans-serif;
+    color: #4f4f4f;
+    background-color: #f5f5f5;
+    overflow-x: hidden;
+
+}
+/* otsikoiden koot tehtävänannon mukaiseksi */
 h1 {
     font-size: 24px;
-    font-weight: bold;
 }
 h2, h3, h4, h5 {
     font-size: 16px;
-    font-weight: bold;
 }
+/* vitosotsikolle tarkemmat muotoilut kuten kirjainten väliin lisää tilaa ja eri fonttiväri */
 h5{
     letter-spacing: 2px; 
-    color: #818963;
+    color: #556B2F;
+    /* color: #818963; */
     margin-top: 20px;
 }
+/* footerin taulukkoelementille muotoilu */
 table{
     color: #4f4f4f; 
     border-color: #666;
 }
-input{
-    padding-right:0;
-}
-.container-fluid{
-    padding: 0;
-}
-
-#navbar {
-    border-bottom: 2px black solid;
-}
-.navLinks{
-    cursor: pointer;
-}
-a{
+/* navigointipalkin sisällä oleville linkeille muotoilu */
+#navbar a{
     text-decoration: none;
-    color: black;
-    margin: 0 20px;
+    letter-spacing: 2pt;
+    color: #556B2F;
+    /* color: #4f4f4f; */
     padding: 10px;
+    font-weight: bold;
 }
-a:hover{
+/* footerin sisällä oleville linkeille muotoilu */
+#footer a{
     text-decoration: none;
-    color: black;
+    color: #4f4f4f;
+    padding:10px
+}
+/* yleisesti linkeille hover-muotoilut */
+#navbar a:hover, #footer a:hover{
+    text-decoration: none;
+    color: #4f4f4f;
     border-radius: 4px;
     background-color: #ee8d51c2;
 }
+/* p-elementin muotoilu */
 p{
     line-height: normal;
     margin:0;
 }
+/* navigointipalkin sijainti */
+#navbarDiv{
+    top: 0;
+    z-index: 2;
+}
+ /* navigointipalkin yleismuotoilu */
+#navbar {
+    height: 150px;
+    box-shadow: 2px 2px 10px #4f4f4f;
+    background-color: whitesmoke;
+}
+/* kursorin muttaminen */
+.navLinks{
+    cursor: pointer;
+}
+/* footerin containerin sijainti */
+#footerContainer{
+    bottom: 0;
+}
+/* footerin taustaväri ja leveys */
 #footer{
     background-color: #d9cfc5;
-    margin-top:50px;
+    width: 100%;
 }
-#carouselDiv{
+/* etusivun kuvan containeri */
+#palvelutHeaderImgDiv{
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top:20px;
+    margin-bottom: 20px;
+}
+/* etusivun kuvan koko */
+#palvelutHeaderImg{
+    width: 100%;
+    filter: grayscale(15%);
+}
+/* etusivun tekstin containeri*/
+#palvelutHeaderTextDiv{
+    width: 70%;
+    top: 45%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    text-wrap: wrap;
+    letter-spacing: 2pt;
+}
+/* etusivun header-tekstin muotoilu */
+#palvelutHeaderText{ 
+    color: white;
+    text-shadow: 10px 10px 20px black;
+    font-size: 4vw;
+    font-weight: bold;
+}
+/* pienempi otsikkoteksti */
+#palvelutHeaderTextSmall{
+    font-size: 1.5vw;
+    font-weight: bold;
+}
+/* pienemmän otsikkotekstin container */
+#palvelutHeaderTextSmallDiv{
+    width: 80%;
+    max-width: 80%;
+    text-align: center;
+    text-wrap: wrap;
+}
+/* Maalaus/tapetointi-otsikot boldaus */
+.palvelutHeader{
+    font-weight: bold;
+}
+/* palvelu-sivun p-elementeille riviväliö */
+.palvelutP{
+    line-height: 1.5;
+}
+/* container teksteille */
+.palveluTexttDiv{
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 2;
+}
+/* palvelu-sivun kuvien containeri */
+.palvelutImgDiv{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+/* palvelu-sivun kuvan koko suhteessa containeriin */
+.palvelutImg{
+    max-width: 60%;
+}
+/* tarjous-nappulan muotoilut */
+.tarjousBtn{
+    border-color: #556B2F;
+    color: #4f4f4f;
+}
+.tarjousBtn:hover{
+    background-color: #556B2F;
+}
+.container-fluid{
+    padding:0;
+}
+.remonttiImg{
+    max-height: 260px;
+}
+
+li{
+    list-style-type: none;
+    cursor: pointer;
+}
+li:hover{
+    font-weight: bold;
+}
+i{
+    font-size: 14pt;
 }
