--- a/css/palvelut.css
+++ b/css/palvelut.css
@@ -1,3 +1,4 @@
+/* TÄSTÄ ALKAA YLEISMUOTOILUT */
 html{
     box-sizing: border-box;
 }
@@ -23,6 +24,8 @@ h5{
     /* color: #818963; */
     margin-top: 20px;
 }
+/* ------------------------------------------------------------------- */
+/* TÄSTÄ ALKAA NAVBARIN JA FOOTERIN MUOTOILUT */
 /* footerin taulukkoelementille muotoilu */
 table{
     color: #4f4f4f; 
@@ -55,6 +58,9 @@ p{
     line-height: normal;
     margin:0;
 }
+.container-fluid{
+    padding: 0;
+}
 /* navigointipalkin sijainti */
 #navbarDiv{
     top: 0;
@@ -70,6 +76,27 @@ p{
 .navLinks{
     cursor: pointer;
 }
+/* Hampparivalikon container */
+.hamburgerDiv{
+    position: relative;
+    height: 60px;
+    width: 100%;
+    background-color: whitesmoke;
+    display: none;
+}
+/* hampurilaisvalikko */
+#hamburger{
+    position: absolute;
+    top: 10%;
+    left: 0;
+    border: unset;
+    background: unset;
+    padding: 10px;
+}
+/* hampparivalikon ikonin väritys */
+#hamburger svg {
+    stroke: #556B2F;
+}
 /* footerin containerin sijainti */
 #footerContainer{
     bottom: 0;
@@ -79,7 +106,11 @@ p{
     background-color: #d9cfc5;
     width: 100%;
 }
-/* etusivun kuvan containeri */
+/* ------------------------------------------------------------ */
+
+/* TÄSTÄ ALKAA SIVUSPESIFIT MUOTOILUT */
+
+/* bannerin containeri */
 #palvelutHeaderImgDiv{
     width: 100%;
     max-width: 100%;
@@ -88,15 +119,15 @@ p{
     margin-top:20px;
     margin-bottom: 20px;
 }
-/* etusivun kuvan koko */
+/* bannerin kuvan koko */
 #palvelutHeaderImg{
     width: 100%;
     filter: grayscale(15%);
 }
-/* etusivun tekstin containeri*/
+/* bannerin tekstin containeri*/
 #palvelutHeaderTextDiv{
     width: 70%;
-    top: 45%; 
+    top: 40%; 
     left: 50%; 
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -104,60 +135,66 @@ p{
     text-wrap: wrap;
     letter-spacing: 2pt;
 }
-/* etusivun header-tekstin muotoilu */
+/* bannerin tekstin muotoilu */
 #palvelutHeaderText{ 
     color: white;
     text-shadow: 10px 10px 20px black;
     font-size: 4vw;
     font-weight: bold;
 }
-/* pienempi otsikkoteksti */
+/* slogan */
 #palvelutHeaderTextSmall{
     font-size: 1.5vw;
     font-weight: bold;
 }
-/* pienemmän otsikkotekstin container */
+/* sloganin container */
 #palvelutHeaderTextSmallDiv{
     width: 80%;
     max-width: 80%;
     text-align: center;
     text-wrap: wrap;
 }
-/* Maalaus/tapetointi-otsikot boldaus */
+/* pienet otsikot tarjotuille palveluille */
 .palvelutHeader{
     font-weight: bold;
 }
-/* palvelu-sivun p-elementeille riviväliö */
-.palvelutP{
-    line-height: 1.5;
+/* nappula */
+.omaBtn{
+    border-color: #556B2F;
+    color: #4f4f4f;
 }
-/* container teksteille */
-.palveluTexttDiv{
-    height: fit-content;
+.omaBtn:hover{
+    background-color: #556B2F;
+}
+/* kuvien koko */
+.palvelutImg{
+    max-height: 480px;
+}
+/* pinemmällä näytöllä säädetään otsikoita vähän isommaksi ja  */
+@media screen and (max-width: 996px){
+    #navbarDiv{
+        display: none;
+    }
+    /* #navbar {
+        display:none;
+    } */
+    .hamburgerDiv {
+        display: flex;
+    }
+    #palvelutHeaderText{
+        font-size: 8vw;
+    }
+    #palvelutHeaderTextDiv{
+        top: 50%;
+    }
+    #palvelutHeaderTextSmall{
+        font-size: 16pt;
+    }
+}
+
+.naviOpen{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    line-height: 2;
-}
-/* palvelu-sivun kuvien containeri */
-.palvelutImgDiv{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-/* palvelu-sivun kuvan koko suhteessa containeriin */
-.palvelutImg{
-    max-width: 60%;
-}
-/* tarjous-nappulan muotoilut */
-.tarjousBtn{
-    border-color: #556B2F;
-    color: #4f4f4f;
-}
-.tarjousBtn:hover{
-    background-color: #556B2F;
-}
-.container-fluid{
-    padding:0;
 }
