--- a/css/testaus.css
+++ b/css/testaus.css
@@ -1,3 +1,4 @@
+/* SIVUN YLEISET MUOTOILUT */
 html{
     box-sizing: border-box;
 }
@@ -23,6 +24,17 @@ h5{
     /* color: #818963; */
     margin-top: 20px;
 }
+/* p-elementin muotoilu */
+p{
+    line-height: normal;
+    margin:0;
+}
+.container-fluid{
+    padding: 0;
+}
+/* ------------------------------------------------------------------------------ */
+
+/* NAVBARIN JA FOOTERIN MUOTOILUT */
 /* footerin taulukkoelementille muotoilu */
 table{
     color: #4f4f4f; 
@@ -50,11 +62,6 @@ table{
     border-radius: 4px;
     background-color: #ee8d51c2;
 }
-/* p-elementin muotoilu */
-p{
-    line-height: normal;
-    margin:0;
-}
 /* navigointipalkin sijainti */
 #navbarDiv{
     top: 0;
@@ -70,6 +77,27 @@ p{
 .navLinks{
     cursor: pointer;
 }
+/* Hampparivalikon container */
+.hamburgerDiv{
+    position: relative;
+    height: 60px;
+    width: 100%;
+    background-color: whitesmoke;
+    display: none;
+}
+/* hampurilaisvalikko */
+#hamburger{
+    position: absolute;
+    top: 10%;
+    left: 0;
+    border: unset;
+    background: unset;
+    padding: 10px;
+}
+/* hampparivalikon ikonin väritys */
+#hamburger svg {
+    stroke: #556B2F;
+}
 /* footerin containerin sijainti */
 #footerContainer{
     bottom: 0;
@@ -79,11 +107,12 @@ p{
     background-color: #d9cfc5;
     width: 100%;
 }
-.container-fluid{
-    padding: 0;
-}
+
+/* ------------------------------------------------------------------ */
+
+/* TÄSTÄ ALKAA SIVUSPESIFIT MUOTOILUT */
 /* etusivun kuvan containeri */
-#palvelutHeaderImgDiv{
+#testausHeaderImgDiv{
     width: 100%;
     max-width: 100%;
     display: flex;
@@ -92,12 +121,12 @@ p{
     margin-bottom: 20px;
 }
 /* etusivun kuvan koko */
-#palvelutHeaderImg{
+#testausHeaderImg{
     width: 100%;
     filter: grayscale(15%);
 }
 /* etusivun tekstin containeri*/
-#palvelutHeaderTextDiv{
+#testausHeaderTextDiv{
     width: 70%;
     top: 40%; 
     left: 50%; 
@@ -108,36 +137,25 @@ p{
     letter-spacing: 2pt;
 }
 /* etusivun header-tekstin muotoilu */
-#palvelutHeaderText{ 
+#testausHeaderText{ 
     color: white;
     text-shadow: 10px 10px 20px black;
     font-size: 4vw;
     font-weight: bold;
 }
 /* pienempi otsikkoteksti */
-#palvelutHeaderTextSmall{
+#testausHeaderTextSmall{
     font-size: 1.5vw;
     font-weight: bold;
 }
 /* pienemmän otsikkotekstin container */
-#palvelutHeaderTextSmallDiv{
+#testausHeaderTextSmallDiv{
     width: 80%;
     max-width: 80%;
     text-align: center;
     text-wrap: wrap;
 }
-
-
-
-
-
-
-.middleContainer{
-    padding: 30px;
-}
-.navLinks{
-    cursor: pointer;
-}
+/* laatikko, johon valittu väri tulee */
 .testColorBox{
     width: 100%;
     height: 300px;
@@ -145,6 +163,7 @@ p{
     border-color: #4f4f4f;
     border-width: 0.1px; */
 }
+/* pienet testiväripallurat */
 .colorBall{
     width: 30px;
     height: 30px;
@@ -153,4 +172,32 @@ p{
     box-shadow: 0px 2px 2px #4f4f4f ;
     cursor: pointer;
 
+}
+/* ------------------------------------------------------------------ */
+
+/* pinemmällä näytöllä säädetään otsikoita vähän isommaksi ja  */
+@media screen and (max-width: 996px){
+    #testausHeaderText{
+        font-size: 8vw;
+    }
+    #testausHeaderTextSmall{
+        font-size: 16pt;
+    }
+    .testColorBoxDiv{
+        width: 80%;
+        justify-content: end!important;
+    }
+    .testColorBox{
+        width: 80%;
+        height: 100px;
+    }
+    #navbarDiv{
+        display: none;
+    }
+    /* #navbar {
+        display:none;
+    } */
+    .hamburgerDiv {
+        display: flex;
+    }
 }
