--- a/css/yhteystiedot.css
+++ b/css/yhteystiedot.css
@@ -1,3 +1,116 @@
+/* TÄSTÄ ALKAA YLEISMUOTOILUT */
+html{
+    box-sizing: border-box;
+}
+/* yleinen fontti koko sivulle*/
+body{
+    font-family: 'Roboto', sans-serif;
+    color: #4f4f4f;
+    background-color: #f5f5f5;
+    overflow-x: hidden;
+
+}
+/* otsikoiden koot tehtävänannon mukaiseksi */
+h1 {
+    font-size: 24px;
+}
+h2, h3, h4, h5 {
+    font-size: 16px;
+}
+/* vitosotsikolle tarkemmat muotoilut kuten kirjainten väliin lisää tilaa ja eri fonttiväri */
+h5{
+    letter-spacing: 2px; 
+    color: #556B2F;
+    /* color: #818963; */
+    margin-top: 20px;
+}
+/* ------------------------------------------------------------------- */
+/* TÄSTÄ ALKAA NAVBARIN JA FOOTERIN MUOTOILUT */
+/* footerin taulukkoelementille muotoilu */
+table{
+    color: #4f4f4f; 
+    border-color: #666;
+}
+/* navigointipalkin sisällä oleville linkeille muotoilu */
+#navbar a, #hamburgerNavbar a{
+    text-decoration: none;
+    font-size: 14pt;
+    letter-spacing: 2pt;
+    color: #556B2F;
+    /* color: #4f4f4f; */
+    padding: 10px;
+    font-weight: bold;
+}
+/* footerin sisällä oleville linkeille muotoilu */
+#footer a{
+    text-decoration: none;
+    color: #4f4f4f;
+    padding:10px
+}
+/* yleisesti linkeille hover-muotoilut */
+#navbar a:hover, #footer a:hover, #hamburgerNavbar a:hover, #hamburgerButton:hover{
+    text-decoration: none;
+    color: #4f4f4f;
+    border-radius: 4px;
+    background-color: #ee8d51c2;
+}
+/* p-elementin muotoilu */
+p{
+    line-height: normal;
+    margin:0;
+}
+.container-fluid{
+    padding: 0;
+}
+/* navigointipalkin sijainti */
+#navbarDiv{
+    top: 0;
+    z-index: 2;
+}
+ /* navigointipalkin yleismuotoilu */
+#navbar {
+    height: 150px;
+    box-shadow: 2px 2px 10px #4f4f4f;
+    background-color: whitesmoke;
+}
+/* kursorin muttaminen */
+.navLinks{
+    cursor: pointer;
+}
+/* Hampparivalikon container */
+.hamburgerDiv{
+    position: relative;
+    height: fit-content;
+    min-height: 40px;
+    width: 100%;
+    background-color: whitesmoke;
+    display: none;
+    z-index: 2;
+}
+/* hampurilaisvalikko */
+#hamburgerButton{
+    border: unset;
+    background: unset;
+    padding: 10px;
+    width: fit-content;
+}
+#hamburgerNavbar{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+/* footerin containerin sijainti */
+#footerContainer{
+    bottom: 0;
+}
+/* footerin taustaväri ja leveys */
+#footer{
+    background-color: #d9cfc5;
+    width: 100%;
+}
+/* ------------------------------------------------------------ */
+
 /* TÄSTÄ ALKAA SIVUSPESIFIT MUOTOILUT */
 /* kartan container */
 #mapDiv{
@@ -43,7 +156,7 @@
 /* banneritekstin muotoilu */
 #yhteysHeaderText{ 
     color: white;
-    text-shadow: 10px 10px 20px black;
+    text-shadow: 2px 2px 4px black;
     font-size: 4vw;
     font-weight: bold;
 }
@@ -61,136 +174,18 @@
 }
 /* ------------------------------------------------------------ */
 
-/* TÄSTÄ SIVUN YLEISMUOTOILUT */
-html{
-    box-sizing: border-box;
-}
-/* yleinen fontti koko sivulle*/
-body{
-    font-family: 'Roboto', sans-serif;
-    color: #4f4f4f;
-    background-color: #f5f5f5;
-    overflow-x: hidden;
-}
-/* otsikoiden koot tehtävänannon mukaiseksi */
-h1 {
-    font-size: 24px;
-}
-h2, h3, h4, h5 {
-    font-size: 16px;
-}
-/* vitosotsikolle tarkemmat muotoilut kuten kirjainten väliin lisää tilaa ja eri fonttiväri */
-h5{
-    letter-spacing: 2px; 
-    color: #556B2F;
-    /* color: #818963; */
-    margin-top: 20px;
-    font-weight: bold;
-}
-.container-fluid{
-    padding: 0;
-    margin: 0;
-}
-/* p-elementin muotoilu */
-p{
-    line-height: normal;
-    margin:0;
-}
-
-/* ------------------------------------------------------------------- */
-
-/* TÄSTÄ ALKAA NAVBARIN JA FOOTERIN MUOTOILUT */
-/* footerin taulukkoelementille muotoilu */
-table{
-    color: #4f4f4f; 
-    border-color: #666;
-}
-/* navigointipalkin sisällä oleville linkeille muotoilu */
-#navbar a{
-    text-decoration: none;
-    letter-spacing: 2pt;
-    color: #556B2F;
-    /* color: #4f4f4f; */
-    padding: 10px;
-    font-weight: bold;
-}
-/* footerin sisällä oleville linkeille muotoilu */
-#footer a{
-    text-decoration: none;
-    color: #4f4f4f;
-    padding:10px
-}
-/* yleisesti linkeille hover-muotoilut */
-a:hover{
-    text-decoration: none;
-    color: #4f4f4f;
-    border-radius: 4px;
-    background-color: #ee8d51c2;
-}
-/* navigointipalkin sijainti */
- #navbarDiv{
-    top: 0;
-    z-index: 2;
- }
- /* navigointipalkin yleismuotoilu */
-#navbar {
-    height: 150px;
-    box-shadow: 2px 2px 10px #4f4f4f;
-    background-color: whitesmoke;
-    /* position: relative; */
-}
-/* kursorin muttaminen */
-.navLinks{
-    cursor: pointer;
-}
-/* footerin containerin sijainti sivulla */
-#footerContainer{
-    bottom: 0;
-}
-/* footerin taustaväri ja leveys */
-#footer{
-    background-color: #d9cfc5;
-    width: 100%;
-}
-/* Hampparivalikon container */
-.hamburgerDiv{
-    position: relative;
-    height: 60px;
-    width: 100%;
-    background-color: whitesmoke;
-    display: none;
-}
-/* hampurilaisvalikko */
-#hamburger{
-    position: absolute;
-    top: 10%;
-    left: 0;
-    border: unset;
-    background: unset;
-    padding: 10px;
-}
-/* hampparivalikon ikonin väritys */
-#hamburger svg {
-    stroke: #556B2F;
-}
-/* ---------------------------------------------------- */
-
-/*  */
 /* NÄYTÖN KOON MUKAAN SÄÄDÖT */
 @media screen and (max-width: 996px){
     #navbarDiv{
         display: none;
     }
-    /* #navbar {
-        display:none;
-    } */
     .hamburgerDiv {
-        display: flex;
+        display: block;
     }
     #yhteysHeaderText{
         font-size: 8vw;
     }
     #yhteysHeaderTextSmall{
-        font-size: 16pt;
+        font-size: 14pt;
     }
 }
